<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">
        <item
            android:title="@string/bill"
            android:icon="@mipmap/ic_home"
            android:id="@+id/ic_home"
            android:checked="true"
            >
        </item>
        <item
            android:icon="@mipmap/ic_secret"
            android:title="@string/password_record"
            android:id="@+id/ic_contacts"
            >
        </item>
        <item
            android:title="@string/bill_total"
            android:icon="@mipmap/ic_note_add"
            android:id="@+id/ic_note_add"
            >
        </item>
        <item
            android:title="@string/memo"
            android:icon="@mipmap/ic_add_alert"
            android:id="@+id/ic_add_alert"
            >
        </item>
        <item
            android:title="@string/setting"
            android:icon="@mipmap/ic_settings"
            android:id="@+id/ic_settings"
            >
        </item>
    </group>
</menu>