<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/divider_color"
    tools:context="arrol.com.xiaomi.view.activity.AddRecordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="6dp"
        android:background="@color/blue_drawer_header"
        >
        <Button
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@mipmap/back"
            android:id="@+id/back_record"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/blue_drawer_header"
            android:textColor="@color/textColor_white"
            android:layout_marginEnd="36dp"
            android:gravity="center"
            android:textSize="22sp"
            android:text="@string/record_title"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:background="@color/white_drawer"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/kind"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginStart="16dp"
            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radioGroup_kind_record"
            android:gravity="center"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/out"
                android:id="@+id/out_record"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in"
                android:layout_marginStart="36dp"
                android:id="@+id/in_record"
                />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:background="@color/white_drawer"
        android:layout_marginTop="20dp"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:gravity="center"
            android:id="@+id/time_record"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_color"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:background="@color/white_drawer"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money"
            android:textSize="18sp"
            android:layout_marginStart="16dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:background="@drawable/edit_background"
            android:gravity="center"
            android:layout_marginEnd="32dp"
            android:id="@+id/amount_record"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:background="@color/white_drawer"
        android:id="@+id/category_record"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:id="@+id/radioGroup_category_record"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food"
                android:id="@+id/food_record"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cloth"
                android:id="@+id/cloth_record"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rent"
                android:id="@+id/rent_record"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trip"
                android:id="@+id/trip_record"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:id="@+id/other_record"
                />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_marginTop="24dp"
        android:background="@color/white_drawer"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remark"
            android:textSize="18sp"
            android:layout_marginStart="8dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edit_background"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:singleLine="false"
            android:id="@+id/remark_record"
            />
    </LinearLayout>
    <ProgressBar
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:id="@+id/progress_record"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/button_selector"
        android:textSize="22sp"
        android:text="@string/sure"
        android:id="@+id/sure_record"
        />
</LinearLayout>
