<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_alert"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="arrol.com.xiaomi.view.activity.alert.AddAlertActivity">

    <include
        android:id="@+id/alert_toolbar"
        layout="@layout/toolbar" />

    <Button
        android:id="@+id/bt_alert_date"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_below="@id/alert_toolbar"
        android:background="@drawable/button_selector"
        android:layout_marginTop="24dp"
        android:text="@string/select_date"
        android:layout_marginStart="16dp"
        />

    <TextView
        android:id="@+id/tv_alert_date"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_below="@id/alert_toolbar"
        android:gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@id/bt_alert_date"
        android:textSize="24sp" />

    <Button
        android:id="@+id/bt_alert_time"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_below="@id/bt_alert_date"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_selector"
        android:layout_marginStart="16dp"
        android:text="@string/select_time"
        />

    <TextView
        android:id="@+id/tv_alert_time"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/bt_alert_date"
        android:gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@id/bt_alert_time"
        android:textSize="24sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:id="@+id/et_alert_remark"
        android:layout_below="@id/bt_alert_time"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_background"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/remark"
        android:gravity="start"
        android:padding="6dp"
        />
    <Button
        android:id="@+id/bt_alert_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="72dp"
        android:background="@drawable/button_selector"
        android:textSize="22sp"
        android:text="@string/sure"
        />

</RelativeLayout>
