<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:text="@string/update_text"
        android:textColor="@color/divider"
        android:gravity="start|center_vertical"
        android:paddingLeft="24dp"
        android:textSize="22sp"
        android:background="@color/blue3"
        android:id="@+id/textView"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/background3"
        android:paddingLeft="6dip"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mark"
            android:textSize="17sp"
            android:textColor="@color/textColor"
            android:layout_marginTop="30dip"
            />
        <EditText
            android:layout_width="255dip"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:layout_marginTop="20dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="5dip"
            android:inputType="textMultiLine"
            android:textColor="@color/textColor"
            android:background="@drawable/edit_back"
            android:id="@+id/update_mark"
            android:gravity="center"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dip"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userName"
                android:textSize="17sp"
                android:textColor="@color/textColor"
                />
            <EditText
                android:layout_width="213dip"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginLeft="8dp"
                android:singleLine="false"
                android:textColor="@color/textColor"
                android:background="@drawable/edit_back"
                android:gravity="center"
                android:id="@+id/update_user"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dip"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passWord"
                android:textSize="17sp"
                android:textColor="@color/textColor"
                />
            <EditText
                android:layout_width="213dip"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginLeft="8dp"
                android:singleLine="false"
                android:textColor="@color/textColor"
                android:background="@drawable/edit_back"
                android:gravity="center"
                android:id="@+id/update_pass"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="60dip"
            android:paddingBottom="6dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="16dip"
            >
            <Button
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_exit_selector"
                android:text="@string/delete"
                android:textSize="20sp"
                android:textColor="@color/divider"
                android:id="@+id/delete"
                />
            <Button
                android:layout_marginLeft="8dip"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:textSize="20sp"
                android:textColor="@color/divider"
                android:text="@string/update"
                android:id="@+id/update"
                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
