<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/background"
    tools:context=".LoginActivity">

    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="24sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linearlayout"
        android:orientation="horizontal"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="60dp"
        >
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/blue"
            android:src="@mipmap/user"
            />
        <EditText
            android:layout_gravity="center"
            android:textSize="18sp"
            android:layout_marginLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username_register"
            android:textColor="@color/textColor"
            android:textColorHint="@color/hintColor"
            android:textCursorDrawable="@null"
            android:background="@null"
            android:hint="@string/userName_edit"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linearlayout"
        android:orientation="horizontal"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        >
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/blue"
            android:src="@mipmap/lock"
            />
        <EditText
            android:layout_gravity="center"
            android:textSize="18sp"
            android:layout_marginLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_register"
            android:textColor="@color/textColor"
            android:textColorHint="@color/hintColor"
            android:textCursorDrawable="@null"
            android:background="@null"
            android:hint="@string/password_edit"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linearlayout"
        android:orientation="horizontal"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        >
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/blue"
            android:src="@mipmap/lock"
            />
        <EditText
            android:layout_gravity="center"
            android:textSize="18sp"
            android:layout_marginLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_again_register"
            android:textColor="@color/textColor"
            android:textColorHint="@color/hintColor"
            android:textCursorDrawable="@null"
            android:background="@null"
            android:hint="@string/password_again"
            />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        android:textSize="20sp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:id="@+id/button_register"
        android:text="@string/register"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_back_login"
        android:background="@drawable/button_selector2"
        android:textSize="20sp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/back_login"
        />
    <ProgressBar
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:id="@+id/progress_register"
        android:layout_gravity="center"
        android:visibility="gone"
        />

</LinearLayout>

