<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_color"
        android:layout_marginTop="10dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="12dp"
        android:id="@+id/layout_photo"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="hello"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/imag5"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_color"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        >
        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/phoneNumber"
            android:gravity="center_vertical"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="18883880426"
            android:gravity="center"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_color"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        >
        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/email"
            android:gravity="center_vertical"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="hxb_arrol@163.com"
            android:gravity="center"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_color"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_color"
        android:layout_marginTop="40dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:padding="12dp"
        android:gravity="center_vertical"
        android:text="@string/change_password"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_color"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/button_exit_selector"
        android:textSize="22sp"
        android:text="@string/exit"
        />
</LinearLayout>